<resources>
    <string name="app_name">Pavlov Bank</string>

    <!-- Strings related to LOGIN -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to MENU -->
    <string name="nav_header_title">Pavlov Bank</string>
    <string name="nav_header_subtitle">sasha_as@bk.ru</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_services">Services</string>
    <string name="menu_more">More</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to HOME -->
    <string name="balance">Balance</string>
    <string name="transactions">Transactions</string>
    <string name="card">Card</string>
    <string name="card_type">card type</string>
    <string name="card_number">card number</string>
    <string name="open_new_card">Open new card</string>

    <!-- Strings related to PAYMENTS -->
    <string name="transfers">Transfers</string>
    <string name="payments">Payments</string>

    <!-- Strings related to SERVICES -->
    <string name="frequently_used">Frequently used</string>
    <string name="all_services">All services</string>
    <string name="your_orders">Your orders</string>

    <!-- Strings related to MORE -->
    <string name="exchange_rates">Exchange rates</string>
    <string name="atms">ATMs</string>
    <string name="export_bank_statement">Export bank statement</string>
    <string name="card_currency">card currency</string>
    <string name="home_screen">Home Screen</string>
    <string name="search">Search for something</string>
    <string name="in_month_spent">In MONTH spent</string>
    <string name="amount">amount</string>
    <string name="invite_friends">Invite friends</string>
    <string name="payment_for_invited_friend">Get 500 rubbles for each friend</string>
    <string name="invite">Invite</string>
    <!-- OTHER -->

</resources>