<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_menu_payments"
            android:title="@string/menu_payments" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_menu_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_more"
            android:icon="@drawable/ic_menu_more"
            android:title="@string/menu_more" />
    </group>
</menu>