<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.pavlovbank.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_payments"
        android:name="com.example.pavlovbank.ui.gallery.GalleryFragment"
        android:label="@string/menu_payments"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.pavlovbank.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.pavlovbank.ui.more.MoreFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/fragment_more" />
</navigation>