<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_dark"
    android:contentDescription="@string/home_screen"
    android:contextClickable="true"
    android:paddingStart="16dp"
    tools:context=".ui.home.HomeFragment"
    tools:ignore="RtlSymmetry">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/content_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/search_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/search"
        android:clickable="true"
        android:text="@string/search"
        android:textAlignment="center"
        android:textColor="@color/gray_text"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/transitions_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/window"
        android:clickable="true"
        android:paddingVertical="15dp"
        android:paddingStart="3dp"
        android:paddingEnd="13dp"
        app:layout_constraintBottom_toTopOf="@id/movements_section_bottom_barrier"
        app:layout_constraintEnd_toStartOf="@id/invite_friends_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <TextView
            android:id="@+id/transitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:textColor="@color/default_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/spent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/transitions"
            android:text="@string/in_month_spent"
            android:textColor="@color/default_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/spent"
            android:text="@string/amount"
            android:textColor="@color/default_text"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/invite_friends_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/window"
        android:paddingVertical="15dp"
        android:paddingStart="3dp"
        android:paddingEnd="13dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/movements_section_bottom_barrier"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toEndOf="@id/transitions_layout"
        app:layout_constraintTop_toBottomOf="@id/search_bar">

        <TextView
            android:id="@+id/invite_friend_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/invite_friends"
            android:textColor="@color/default_text"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/invite_friend_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/invite_friend_sign"
            android:text="@string/payment_for_invited_friend"
            android:textColor="@color/default_text"
            android:textSize="20sp" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/movements_section_bottom_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="transitions_layout, invite_friends_layout" />

    <RelativeLayout
        android:id="@+id/card_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/content_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movements_section_bottom_barrier">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_currency">

            <TextView
                android:id="@+id/card_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textColor="@color/default_text"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/card_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_balance"
                android:text="@string/card_type"
                android:textColor="@color/default_text"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_type"
                android:text="@string/card_number"
                android:textColor="@color/default_text"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/card_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:adjustViewBounds="false"
            android:contentDescription="@string/card_currency"
            android:cropToPadding="false"
            app:srcCompat="@drawable/ic_baseline_currency_ruble_24" />
    </RelativeLayout>

    <Button
        android:id="@+id/open_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/default_button_foreground"
        android:clickable="true"
        android:text="@string/open_new_card"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>